# raif-bootcamp-2024

./: Dockerfile  README.md  docker-compose.mongodb.yml  docker-compose.yml  format_code.sh  prometheus.yml  pyproject.toml
.github/workflows/: main.yml
tests/: test_test.py
wolf_assistant/: app.py  settings.py
wolf_assistant/backend/: db_con.py  mongo_logger.py
wolf_assistant/clients/: openai_client.py  prompts.py
wolf_assistant/config/: openai_client.py  telegram_bot.py  tokens.py
wolf_assistant/data/: constant_messages.py  data_types.py
wolf_assistant/handlers/: audio_handlers.py  command_handlers.py  image_file_handlers.py  message_handlers.py  video_file_handlers.py  video_handlers.py  video_note_handlers.py
wolf_assistant/metrics/: metrics.py
wolf_assistant/utils/: escape_markdown_v2.py  helpers.py
