[tool.poetry]
name = "wolf-assistant"
version = "0.1.0"
description = "Ml service for assisten"
authors = ["team <team-ds-wolf-@raiffeisen.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9,<3.11"
fastapi = "^0.111.0"
python-telegram-bot = "^21.2"
uvicorn = "^0.29.0"
gunicorn = "^22.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
